--- a/PokemonBDSPRNGLibrary/PokemonBDSPRNGLibrary.csproj
+++ b/PokemonBDSPRNGLibrary/PokemonBDSPRNGLibrary.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PokemonPRNG" Version="3.5.3" />
+    <PackageReference Include="PokemonPRNG.Xoroshiro128p" Version="1.2.0" />
+    <PackageReference Include="PokemonPRNG.XorShift128" Version="1.1.0" />
     <PackageReference Include="PokemonStandardLibrary" Version="1.3.0" />
     <PackageReference Include="PokemonStandardLibrary.Gen8" Version="1.0.0" />
   </ItemGroup>
